--- a/rw-koin-codelab/app/build.gradle
+++ b/rw-koin-codelab/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply from: '../keys.gradle'
 
 ext {
     koinVersion = "2.0.1"
@@ -29,6 +30,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.release
+        buildConfigField("String", "NASA_API_KEY", "\"$NASA_API_KEY\"")
     }
     buildTypes {
         release {
