--- a/rw-mvvm/app/build.gradle
+++ b/rw-mvvm/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
   annotationProcessor "android.arch.persistence.room:compiler:$room_version"
   kapt "android.arch.persistence.room:compiler:$room_version"
 
+  // ViewModel and LiveData
+  implementation "android.arch.lifecycle:extensions:$arch_version"
+
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
