--- a/rw-mvvm/build.gradle
+++ b/rw-mvvm/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     kotlin_version = '1.2.70'
     support_version = '28.0.0-rc02'
     room_version = '1.1.1'
+    arch_version = '1.1.1'
   }
   repositories {
     google()
