--- a/rw-bottom-navigation/app/build.gradle
+++ b/rw-bottom-navigation/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.1.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-
+  implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigation_version"
+  implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigation_version"
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.2.0'
