--- a/rw-dark-theme/app/build.gradle
+++ b/rw-dark-theme/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.1.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-  implementation 'com.google.android.material:material:1.1.0-alpha10'
+  implementation 'com.google.android.material:material:1.1.0'
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.2.0'
